--- a/src/page.module.css
+++ b/src/page.module.css
@@ -1,29 +1,58 @@
-.body{
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
+
+.body {
     background-color: rgb(37, 54, 67);
     display: flex;
-flex-direction: row;
-justify-content: center;
-align-items: center;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
-.divform{
-
- width: 300px;
-    height: 300px;
+.divform {
+    margin-top: 5rem;
+    width: 22rem;
+    height: 22rem;
     background: #fff;
+    border-radius: 10px;
+   
 }
-.button{
-    width: 100px;
-    height: 25px;
+
+.button {
+    margin-top: 15px;
+    width: 25vw;
+    height: 5vh;
+    background-color: #ffd71a;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  text-decoration: none;
+  cursor: pointer;
+  margin-left: 5%;
 }
-.iptemail{
-    width: 18vw;
-    height: 3vh;
-    margin-left: 5px;
+
+.iptemail {
+    width: 26vw;
+    height: 5vh;
+    margin-left: 2.5%;
+    border: none;
+    border-bottom: 2px solid #ffd71a;
+    outline: 0;
 }
-.iptsenha{
-    width: 18vw;
-    height: 3vh;
-    margin-left: 5px;
+
+.iptsenha {
+    width: 26vw;
+    height: 5vh;
+    margin-left: 2.5%;
     margin-top: 10px;
+    border: none;
+    border-bottom: 2px solid #ffd71a;
+    outline: 0;
+}
+
+.h1{
+    margin-left: 8rem;
+    margin-top: 3rem;
+    font-family: 'Abril Fatface';
+    font-size: 40px;
+    color: rgb(37, 54, 67);
 }
