--- a/src/page.module.css
+++ b/src/page.module.css
@@ -8,26 +8,40 @@
     align-items: center;
 }
 
+.bodyalter {
+    background-color: rgb(37, 54, 67);
+    
+}
+
+.centernav{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+
 .divform {
     margin-top: 5rem;
     width: 22rem;
     height: 22rem;
     background: #fff;
     border-radius: 10px;
-   
+
 }
+
 
 .button {
     margin-top: 15px;
     width: 25vw;
     height: 5vh;
     background-color: #ffd71a;
-  border: none;
-  border-radius: 5px;
-  color: white;
-  text-decoration: none;
-  cursor: pointer;
-  margin-left: 5%;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    text-decoration: none;
+    cursor: pointer;
+    margin-left: 5%;
 }
 
 .iptemail {
@@ -48,13 +62,101 @@
     border-bottom: 2px solid #ffd71a;
     outline: 0;
 }
+.iptnome {
+    width: 26vw;
+    height: 5vh;
+    margin-left: 2.5%;
+    margin-top: 10px;
+    border: none;
+    border-bottom: 2px solid #ffd71a;
+    outline: 0;
+}
 
-.h1{
-    margin-left: 8rem;
+.h1 {
+    margin-left: 7rem;
     margin-top: 3rem;
     font-family: 'Abril Fatface';
     font-size: 40px;
     color: rgb(37, 54, 67);
 }
 
+.nav {
 
+    border: 2px solid #ffd71a;
+    padding-top: 10px;
+    width: 26rem;
+    padding-bottom: 7px;
+    border-radius: 5px;
+}
+
+.navdiv {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.alogin {
+    text-decoration: underline;
+    text-decoration: teal;
+    border-radius: 2px;
+    border-color: teal;
+    text-transform: uppercase;
+    font: bold;
+    font-size: 15px;
+    letter-spacing: 0.025em;
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+    margin-right: 2rem;
+    color: #ffffff;
+
+}
+.alista{
+    text-decoration: underline;
+    text-decoration: teal;
+    border-radius: 2px;
+    border-color: teal;
+    text-transform: uppercase;
+    font: bold;
+    font-size: 15px;
+    letter-spacing: 0.025em;
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+    margin-right: 2rem;
+    color: #ffffff;
+}
+.aalterar{
+    text-decoration: underline;
+    text-decoration: teal;
+    border-radius: 2px;
+    border-color: teal;
+    text-transform: uppercase;
+    font: bold;
+    font-size: 15px;
+    letter-spacing: 0.025em;
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+    margin-right: 2rem;
+    color: #ffffff;
+}
+.aregister{
+    text-decoration: underline;
+    text-decoration: teal;
+    border-radius: 2px;
+    border-color: teal;
+    text-transform: uppercase;
+    font: bold;
+    font-size: 15px;
+    letter-spacing: 0.025em;
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+    margin-right: 2rem;
+    color: #ffffff;
+}
+
+.section{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
